--- a/Assets/Scripts/Economy/Economy.asmdef
+++ b/Assets/Scripts/Economy/Economy.asmdef
@@ -1,3 +1,18 @@
 {
-	"name": "Economy"
+    "name": "Economy",
+    "rootNamespace": "",
+    "references": [
+        "GUID:54dfb48d80600a449b5d4e860987e05a",
+        "GUID:7262326d00c458e44bf68bedb50b333e",
+        "GUID:ae5d486223586494296486b3352c74c6"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
